# demo-vocabs

./: README.adoc  Taskfile.yml  catalogue.ttl  pestRiskPath.ttl  pyproject.toml
_background/: annotations.ttl  labels.ttl
vocabs/: image-test.ttl  language-test.ttl  pestRiskPath_training.ttl  pestRiskPath_validator.ttl
